# Indirect_Predicates

./: CMakeLists.txt
cmake/indirectpredicates/: indirectpredicates_filter_flags.cmake  indirectpredicates_use_colors.cmake  indirectpredicates_warnings.cmake
